manifest/users-service/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-service
spec:
  type: ClusterIP
  selector:
    app: users-service
  ports:
    - port: 8080
      targetPort: 8080
