manifest/users-service/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: user-service-ingress

spec:
  ingressClassName: nginx

  rules:
    - host: users.emicorp.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: users-service
                port: 
                  number: 8080
